# sparsestack

./: .gitignore  CITATION.cff  README.md  setup.cfg  setup.py  testing.py  testing2.py
.github/workflows/: CI_build.yml  CI_publish_pypi.yml
sparsestack/: StackedSparseArray.py  __init__.py  utils.py
stacked-sparse-array/: StackedSparseArray.py
tests/: test_stacked_sparse_array.py  test_stacked_sparse_scores.py  test_utils.py
