[metadata]
description-file = README.me

[aliases]
test = pytest

[tool:isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
lines_after_imports = 2
known_first_party = sparsestack
skip = readthedocs/conf.py

[coverage:run]
branch = True
source = sparsestack

[tool:pytest]
testpaths = tests
python_classes = *TestSuite
junit_family = xunit2
